Tested notebook code in other computers.

--- a/Course-Industry Matching.ipynb
+++ b/Course-Industry Matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -12,7 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5 ms\n"
+      "CPU times: user 6.67 ms, sys: 0 ns, total: 6.67 ms\n",
+      "Wall time: 5.19 ms\n"
      ]
     }
    ],
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12.6 s\n"
+      "CPU times: user 11.3 s, sys: 10 ms, total: 11.3 s\n",
+      "Wall time: 11.3 s\n"
      ]
     }
    ],
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -62,10 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\Asus\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "Wall time: 4.13 s\n"
+      "CPU times: user 63.3 ms, sys: 0 ns, total: 63.3 ms\n",
+      "Wall time: 59.5 ms\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -102,7 +102,7 @@
        " 'ARCHITECTURAL']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
        " 'BUILDING']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
        " 'ENGINE']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -185,7 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 342 ms\n"
+      "CPU times: user 86.7 ms, sys: 0 ns, total: 86.7 ms\n",
+      "Wall time: 86.2 ms\n"
      ]
     }
    ],
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -243,123 +244,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LINGUISTICS</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.111031</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.111031</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.023</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.020312</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.045016</td>\n",
-       "      <td> 0.042213</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.020312</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.045016</td>\n",
+       "      <td>0.042213</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HARDWARE</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AGRICULTURAL</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.052721</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.052721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ELEMENTARY</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.034037</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.034037</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NCII</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -398,7 +399,7 @@
        "[5 rows x 142 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -419,7 +420,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 30 ms\n"
+      "CPU times: user 123 ms, sys: 3.33 ms, total: 127 ms\n",
+      "Wall time: 124 ms\n"
      ]
     }
    ],
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -452,7 +454,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 64 ms\n"
+      "CPU times: user 287 ms, sys: 3.33 ms, total: 290 ms\n",
+      "Wall time: 290 ms\n"
      ]
     }
    ],
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -490,7 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1e+03 µs\n"
+      "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
+      "Wall time: 1.28 ms\n"
      ]
     },
     {
@@ -509,7 +513,7 @@
        "Name: BUSINESS, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -536,7 +540,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1 ms\n"
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 1.51 ms\n"
      ]
     },
     {
@@ -551,7 +556,7 @@
        "Name: SCIENCE, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -574,7 +579,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 4 ms\n"
+      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
+      "Wall time: 19.2 ms\n"
      ]
     }
    ],
@@ -589,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -598,7 +604,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1e+03 µs\n"
+      "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
+      "Wall time: 688 µs\n"
      ]
     }
    ],
@@ -614,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -630,7 +637,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -651,16 +658,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6 ms\n"
+      "CPU times: user 30 ms, sys: 0 ns, total: 30 ms\n",
+      "Wall time: 27.9 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "55.353636624354287"
+       "55.353636624354294"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -692,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -700,10 +708,10 @@
     {
      "data": {
       "text/plain": [
-       "0.28752848943447878"
+       "0.28752848943447895"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -725,7 +733,7 @@
        "2.0381146684142672"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -744,10 +752,10 @@
     {
      "data": {
       "text/plain": [
-       "37.428856177544375"
+       "37.428856177544361"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -771,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -779,10 +787,10 @@
     {
      "data": {
       "text/plain": [
-       "69.02283501675754"
+       "69.022835016757483"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
